--- a/src/app/components/excluir/excluir.component.html
+++ b/src/app/components/excluir/excluir.component.html
@@ -1,1 +1,11 @@
-<p>excluir works!</p>
+<div *ngIf="livro">
+    <h1 mat-dialog-title>Deseja confirmar a exclução?</h1>
+    <div mat-dialog-content>
+        <p style="font: bold;">Autor:</p>
+        <p>{{livro.autor}}</p>
+
+    </div>
+    <div mat-dialog-actions>
+        <button mat-button mat-raised-button color="warn" (click)="excluirLivro()">Confirmar</button>
+    </div>
+</div>
