--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,3 +1,3 @@
-<p>
-  cadastro works!
-</p>
+<div>
+  <app-livro-form [btnAcao]="btnAcao" [btnTitulo]="btnTitulo" (onSubmit)="PostLivro($event)"></app-livro-form>
+</div>
